--- a/src/style.scss
+++ b/src/style.scss
@@ -11,7 +11,7 @@ body{
     text-align: center;
     background-color: whitesmoke;
     padding: 2%;
-    border-bottom: 3px lightblue solid;
+    border-bottom: 3px black solid;
   }
   #input{
     width: 30%;
@@ -114,5 +114,53 @@ body{
   .liked_unliked_button{
     margin: 5% 70% 1% 0;
   }
+  #small_screen_header{
+    display: none;
+  }
   
+}
+
+
+@media only screen and (max-width: 800px){
+body{
+  article{
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .box_container{
+    height: 500px;
+    width: 90%;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .liked_box_container{
+    display: grid;
+    grid-template-columns: 1fr ;
+    min-width: 90%;
+    height: auto;
+    min-height: 300px;
+    margin: 1% 5% 5% 1%;
+  }
+  h2{
+   font-size: 20px;
+  }
+  h3{
+    text-align: center;
+    font-size: 15px;
+  }
+  #liked_box{
+    padding: 20px;
+    margin: 5px;
+    text-align: center;
+    min-height: 100px;
+    width: 90%;
+   }
+    ul{
+      text-align: center;
+      margin-left: 0;
+    }
+    #small_screen_header{
+      display: block;
+    }
+  }
 }
