--- a/src/Components/main/style.scss
+++ b/src/Components/main/style.scss
@@ -123,15 +123,10 @@ body{
     }
     .liked_button, .unliked_button{
       margin: 5% 70% 1% 0;
-      border-radius: 2px;
     }
-    .liked_button:hover{
-      background-color: brown;
-      border: 2px solid brown;
-    }
-    .unliked_button:hover{
-      background-color: black;
-      border: 2px solid black;
+    .liked_button:hover,.unliked_button:hover{
+      background-color: rgb(163, 93, 93);
+      border: 2px solid rgb(163, 93, 93);
     }
     #small_screen_header{
       display: none;
